@@ -37,7 +37,8 @@ namespace CIAO
 
         ::DDS::OfferedDeadlineMissedStatus ddsstatus;
         ddsstatus <<= status;
-        ::DDS::DataWriter_var dds_writer = new RTI_DataWriter_i ();
+        ::DDS::DataWriter_var dds_writer = ::DDS::DataWriter::_nil ();
+        ACE_NEW (dds_writer, RTI_DataWriter_i ());
         RTI_DataWriter_i *dw = dynamic_cast< RTI_DataWriter_i * > (dds_writer.in ());
         dw->set_impl (writer);
         this->impl_->on_offered_deadline_missed (dds_writer.in (), ddsstatus);
@@ -52,7 +53,8 @@ namespace CIAO
 
         ::DDS::OfferedIncompatibleQosStatus ddsstatus;
         ddsstatus <<= status;
-        ::DDS::DataWriter_var dds_writer = new RTI_DataWriter_i ();
+        ::DDS::DataWriter_var dds_writer = ::DDS::DataWriter::_nil ();
+        ACE_NEW (dds_writer, RTI_DataWriter_i ());
         RTI_DataWriter_i *dw = dynamic_cast< RTI_DataWriter_i * > (dds_writer.in ());
         dw->set_impl (writer);
         this->impl_->on_offered_incompatible_qos (dds_writer.in (), ddsstatus);
@@ -67,7 +69,8 @@ namespace CIAO
 
         ::DDS::LivelinessLostStatus ddsstatus;
         ddsstatus <<= status;
-        ::DDS::DataWriter_var dds_writer = new RTI_DataWriter_i ();
+        ::DDS::DataWriter_var dds_writer = ::DDS::DataWriter::_nil ();
+        ACE_NEW (dds_writer, RTI_DataWriter_i ());
         RTI_DataWriter_i *dw = dynamic_cast< RTI_DataWriter_i * > (dds_writer.in ());
         dw->set_impl (writer);
         this->impl_->on_liveliness_lost (dds_writer.in (), ddsstatus);
@@ -82,7 +85,8 @@ namespace CIAO
 
         ::DDS::PublicationMatchedStatus ddsstatus;
         ddsstatus <<= status;
-        ::DDS::DataWriter_var dds_writer = new RTI_DataWriter_i ();
+        ::DDS::DataWriter_var dds_writer = ::DDS::DataWriter::_nil ();
+        ACE_NEW (dds_writer, RTI_DataWriter_i ());
         RTI_DataWriter_i *dw = dynamic_cast< RTI_DataWriter_i * > (dds_writer.in ());
         dw->set_impl (writer);
         this->impl_->on_publication_matched (dds_writer.in (), ddsstatus);
