@@ -51,8 +51,11 @@ namespace CIAO
       ::DDS::DataReader_ptr
       RTI_QueryCondition_i::get_datareader (void)
       {
+        ::DDS::DataReader_var dds_reader = ::DDS::DataReader::_nil ();
+        ACE_NEW_THROW_EX (dds_reader,
+                          RTI_DataReader_i (),
+                          CORBA::NO_MEMORY ());
         ::DDSDataReader* reader = this->impl ()->get_datareader ();
-        ::DDS::DataReader_var dds_reader = new RTI_DataReader_i ();
         RTI_DataReader_i *rti_dr = dynamic_cast < RTI_DataReader_i *>(dds_reader.in ());
         rti_dr->set_impl (reader);
 
