@@ -30,7 +30,8 @@ namespace CIAO
       {
         ::DDS::InconsistentTopicStatus ddsstatus;
         ddsstatus <<= status;
-        ::DDS::Topic_var dds_topic = new RTI_Topic_i ();
+        ::DDS::Topic_var dds_topic = ::DDS::Topic::_nil ();
+        ACE_NEW (dds_topic, RTI_Topic_i ());
         RTI_Topic_i *tp = dynamic_cast < RTI_Topic_i *> (dds_topic.in ());
         tp->set_impl (the_topic);
         this->impl_->on_inconsistent_topic (dds_topic.in (), ddsstatus);
